--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,10 @@
 <head>
-  <title>kulluz.com</title>
+  <title>volvo-hub</title>
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
 </head>
 
 <body>
+
+      <div id="global_map"/>
   <div id="react-target"></div>
 </body>
